# Solitaire-written-using-TDD-approach

./: .gitmodules  CMakeLists.txt  README.md
SolitaireExe/: main.cpp  (+2 more)
SolitaireLib/: CMakeLists.txt
SolitaireLib/headers/: Application.h  Button.h  Context.h  DefaultContext.h  DefaultSDLDeleter.h  DefaultSolitaire.h  Layout.h  Renderer.h  SDLDeleter.h  SDLPtr.h  SDLWrapper.h  Solitaire.h
SolitaireLib/headers/SDL/: DefaultWrapper.h  PtrDeleter.h  UniquePtr.h  Wrapper.h
SolitaireLib/headers/archivers/: Archiver.h  DefaultHistoryTracker.h  DefaultMoveCardsOperationSnapshotCreator.h  HistoryTracker.h  MoveCardsOperationSnapshotCreator.h  Snapshot.h
SolitaireLib/headers/cards/: Card.h  Cards.h  CardsGenerator.h  Deck.h  DeckGenerator.h  ShuffledCardsGenerator.h  ShuffledDeckGenerator.h  Suit.h  Value.h
SolitaireLib/headers/colliders/: DefaultFoundationPileCollider.h  FoundationPileCollider.h  StockPileCollider.h  TableauPileCollider.h
SolitaireLib/headers/events/: DefaultEventsProcessor.h  Event.h  EventsDefinitions.h  EventsProcessor.h  EventsSource.h  SDLEventsSource.h
SolitaireLib/headers/geometry/: Area.h  Layout.h  Position.h  Size.h
SolitaireLib/headers/graphics/: DefaultRenderer.h  DefaultSDLDeleter.h  DefaultSDLWrapper.h  GraphicsSystem.h  Layout.h  Renderer.h  SDLDeleter.h  SDLGraphicsSystem.h  SDLPtr.h  SDLWrapper.h  TextureArea.h  TextureId.h  TexturePosition.h  TextureSize.h
SolitaireLib/headers/interfaces/: Button.h  Context.h  Solitaire.h
SolitaireLib/headers/interfaces/SDL/: Wrapper.h
SolitaireLib/headers/interfaces/archivers/: Archiver.h  HistoryTracker.h  MoveCardsOperationSnapshotCreator.h  Snapshot.h
SolitaireLib/headers/interfaces/cards/: DeckGenerator.h
SolitaireLib/headers/interfaces/colliders/: FoundationPileCollider.h  StockPileCollider.h  TableauPileCollider.h
SolitaireLib/headers/interfaces/events/: EventsProcessor.h  EventsSource.h
SolitaireLib/headers/interfaces/graphics/: GraphicsSystem.h  Renderer.h
SolitaireLib/headers/interfaces/piles/: FoundationPile.h  StockPile.h  TableauPile.h
SolitaireLib/headers/interfaces/time/: FPSLimiter.h  StdTimeFunctionsWrapper.h
SolitaireLib/headers/piles/: DefaultFoundationPile.h  DefaultStockPile.h  DefaultTableauPile.h  FoundationPile.h  PileId.h  StockPile.h  TableauPile.h
SolitaireLib/headers/time/: ChronoFPSLimiter.h  DefaultStdTimeFunctionsWrapper.h  FPSLimiter.h  StdTimeFunctionsWrapper.h
SolitaireLib/sources/: Application.cpp  Button.cpp  Context.cpp  DefaultContext.cpp  DefaultSolitaire.cpp  Layout.cpp  Renderer.cpp  SDLWrapper.cpp  Solitaire.cpp
SolitaireLib/sources/SDL/: DefaultWrapper.cpp  PtrDeleter.cpp  Wrapper.cpp
SolitaireLib/sources/archivers/: DefaultHistoryTracker.cpp  DefaultMoveCardsOperationSnapshotCreator.cpp  HistoryTracker.cpp  MoveCardsOperationSnapshotCreator.cpp
SolitaireLib/sources/cards/: Card.cpp  ShuffledCardsGenerator.cpp  ShuffledDeckGenerator.cpp
SolitaireLib/sources/colliders/: DefaultFoundationPileCollider.cpp  FoundationPileCollider.cpp  StockPileCollider.cpp  TableauPileCollider.cpp
SolitaireLib/sources/events/: DefaultEventsProcessor.cpp  EventsProcessor.cpp  SDLEventsSource.cpp
SolitaireLib/sources/graphics/: DefaultRenderer.cpp  DefaultSDLWrapper.cpp  GraphicsSystem.cpp  Renderer.cpp  SDLDeleter.cpp  SDLGraphicsSystem.cpp
SolitaireLib/sources/piles/: DefaultFoundationPile.cpp  DefaultStockPile.cpp  DefaultTableauPile.cpp  FoundationPile.cpp  StockPile.cpp  TableauPile.cpp
SolitaireLib/sources/time/: ChronoFPSLimiter.cpp  DefaultStdTimeFunctionsWrapper.cpp  StdTimeFunctionsWrapper.cpp
SolitaireLib/unitTests/: CMakeLists.txt
SolitaireLib/unitTests/headers/: ButtonMock.h  ContextMock.h  SolitaireMock.h
SolitaireLib/unitTests/headers/SDL/: PtrDeleterMock.h  WrapperMock.h
SolitaireLib/unitTests/headers/archivers/: HistoryTrackerMock.h  MoveCardsOperationSnapshotCreatorMock.h  SnapshotMock.h
SolitaireLib/unitTests/headers/cards/: CardsGeneratorMock.h  CardsGeneratorUtils.h  DeckGeneratorMock.h  DeckGeneratorUtils.h
SolitaireLib/unitTests/headers/colliders/: FoundationPileColliderMock.h  StockPileColliderMock.h  TableauPileColliderMock.h
SolitaireLib/unitTests/headers/events/: EventsProcessorMock.h  EventsSourceMock.h
SolitaireLib/unitTests/headers/graphics/: GraphicsSystemMock.h  RendererMock.h  SDLDeleterMock.h  SDLWrapperMock.h
SolitaireLib/unitTests/headers/piles/: FoundationPileMock.h  PileUtils.h  StockPileMock.h  TableauPileMock.h
SolitaireLib/unitTests/headers/time/: FPSLimiterMock.h  StdTimeFunctionsWrapperMock.h
SolitaireLib/unitTests/sources/: ApplicationTests.cpp  ButtonTests.cpp  ContextTests.cpp  DefaultContextTests.cpp  DefaultSolitaireTests.cpp  LayoutTests.cpp  SolitaireTests.cpp
SolitaireLib/unitTests/sources/archivers/: DefaultHistoryTrackerTests.cpp  DefaultMoveCardsOperationSnapshotCreatorTests.cpp  HistoryTrackerTests.cpp  MoveCardsOperationSnapshotCreatorTests.cpp
SolitaireLib/unitTests/sources/cards/: CardTests.cpp  CardsGeneratorUtils.cpp  DeckGeneratorUtils.cpp  ShuffledCardsGeneratorTests.cpp  ShuffledDeckGeneratorTests.cpp  SuitTests.cpp  ValueTests.cpp
SolitaireLib/unitTests/sources/colliders/: DefaultFoundationPileColliderTests.cpp  FoundationPileColliderTests.cpp  StockPileColliderTests.cpp  TableauPileColliderTests.cpp
SolitaireLib/unitTests/sources/events/: DefaultEventsProcessorTests.cpp  EventsDefinitionsTests.cpp  EventsProcessorTests.cpp  SDLEventsSourceTests.cpp
SolitaireLib/unitTests/sources/geometry/: AreaTests.cpp  PositionTests.cpp  SizeTests.cpp
SolitaireLib/unitTests/sources/graphics/: DefaultRendererTests.cpp  GraphicsSystemTests.cpp  RendererTests.cpp  (+1 more)
libs/SDL2/: CMakeLists.txt
unitTests/: CMakeLists.txt
unitTests/sources/piles/: DefaultFoundationPileTests.cpp
ut/: CMakeLists.txt  DummyTest.cpp
ut/card/: CardTest.cpp  ShuffledCardsGeneratorTest.cpp
ut/cards/: ShuffledCardsGeneratorTest.cpp
ut/piles/: DefaultStockPileTest.cpp  DefaultTableauPileTest.cpp  FoundationPileTest.cpp  StockPileTest.cpp  TableauPileTest.cpp
ut/src/cards/: CardTest.cpp
(+58 files in other folders)
